# jd-take-bean

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: .env  lib.rs  main.rs
