[package]
name = "jd_take_bean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jd_com = { git = "https://github.com/ClassmateLin/jd-com", branch = "next" }
serde = {version = "1.0.145", features = ["derive"]}
serde_json = {version = "1.0.85", default-features = false, features = ["alloc"]}
reqwest = {version="0.11.12", default-features=false, features = ["json", "rustls-tls"]}
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread"] }
anyhow = { version = "1.0.65" }
dotenv = {version="0.15.0"}
log = { version = "0.4.17"}
pretty_env_logger = { version = "0.4.0"}
futures = {version="0.3.24"}

[profile.release]
lto = true
opt-level="z"
codegen-units = 1
panic = "abort"
strip = true